# robot_target_practice

./: README.md  px150_1.yaml  px150_2.yaml
apriltag_ros_config/: settings.param.yaml  tags.param.yaml  tags.yaml
docker/: Dockerfile.fastdds  Dockerfile.galactic  create_and_run_docker.sh  create_and_run_docker_fastdds.sh  start_attach_container.sh
src/esp32cam_driver/: package.xml  setup.cfg  setup.py
src/esp32cam_driver/esp32cam_driver/: cam_driver.py
src/esp32cam_driver/launch/: cam_driver_launch.py
src/esp32cam_driver/resource/: caminfo.txt  caminfo_qvga.yaml  caminfo_vga.txt  caminfo_vga.yaml
src/target_practice/: package.xml  setup.cfg  setup.py
src/target_practice/launch/: arm_controller_launch.py  arm_controller_launch_with_camera.py  arm_controller_launch_with_camera_espcam.py  arm_controller_launch_with_locator.py  arm_controller_launch_with_locator_espcam.py  espcam_calibrator_launch.py  robot_local_launch.py  robot_local_launch_espcam.py  robot_remote_launch.py  robot_remote_launch_closed.py  single_arm_local_launch_two_cameras.py  target_practice_launch.py
src/target_practice/resource/: camera_calibration.py
src/target_practice/target_practice/: arm_controller.py  camera_calibrator.py  controller.py  controller_closed.py  espcam_locator.py  exp_manager.py  realsense_locator.py  single_detection.py  tag_detector.py
