<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_practice</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>apriltag_ros</build_depend>
  <build_depend>example_interfaces</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>interbotix_xs_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>esp32cam_driver</build_depend>

  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>interbotix_xs_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>esp32cam_driver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
